# intronIC

./: .gitattributes  MANIFEST.in  README.md  intronIC  setup.cfg
intronIC/: _version.py  intronIC  intronIC.py  matrices_from_seqs.py  pwms_from_seqs.py
intronIC/data/: combo.bp.pwm  combo.pwm  empirical.u12s.2+.pub_required.matrices  scoring_matrices.2+.pub_required.fasta.iic  scoring_matrices.2+_pub_required.combo_bp.fasta.iic  scoring_matrices.2+_pubs.fasta.iic  u12.empirical_2+_pubs.pineda.combo.pwms  u2.conserved_empirical_bp_matrix.iic  u2.conserved_empirical_bp_pwm.iic  u2.pwms
intronIC/test_data/: check.txt
intronIC/test_data/troubleshoot/: intronIC.py  test.intron  test.log.iic  test.meta.iic  test.pwms.iic  test.score_info.iic
