[metadata]
name = intronIC
version = 1.0.10
license = GPL v3.0
description = Retrieve annotated intron sequences and classify them as minor (U12-type) or major (U2-type)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glarue/intronIC/
author = Graham Larue
author_email = egrahamlarue@gmail.com

[options]
packages = find:
include_package_data = True
install_requires = 
    numpy
    scipy
    scikit-learn >=0.20.1
    biogl
    matplotlib
python_requires = >=3.3

[options.package_data]
intronIC = intronIC/data/*

[options.entry_points]
console_scripts = 
    intronIC = intronIC.intronIC:main

[versioneer]
VCS = git
style = pep440
versionfile_source = intronIC/_version.py
versionfile_build = intronIC/_version.py
tag_prefix =
parentdir_prefix = intronIC-